Fix search result overflow

--- a/mix/resources/sass/search.scss
+++ b/mix/resources/sass/search.scss
@@ -1,7 +1,7 @@
-.search-results {
-    z-index: 1000;
-    max-height: 80vh;
-}
+// .search-results {
+//     z-index: 1000;
+//     max-height: 80vh;
+// }
 
 #search {
 
